--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.471.1",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "next-view-transitions": "^0.3.4",
