--- a/.github/workflows/update-weather-badge.yml
+++ b/.github/workflows/update-weather-badge.yml
@@ -1,38 +1,38 @@
-name: Update Weather Badge
+# name: Update Weather Badge
 
-on:
-  # schedule:
-  #   - cron: "12 * * * *" # Runs every hour
-  workflow_dispatch: # Allows manual triggering
+# on:
+#   # schedule:
+#   #   - cron: "12 * * * *" # Runs every hour
+#   workflow_dispatch: # Allows manual triggering
 
-jobs:
-  update_badge:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
+# jobs:
+#   update_badge:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: write
+#       issues: write
+#       pull-requests: write
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-      - name: Fetch weather data
-        run: |
-          curl -s "https://playing-with-fastapi.vercel.app/weather/lubumbashi" > weather.json
-          jq -r '" " + (.temperature | sub("°C"; "") | tonumber | floor | tostring) + "°C, " + .condition' weather.json > weather.txt
+#       - name: Fetch weather data
+#         run: |
+#           curl -s "https://playing-with-fastapi.vercel.app/weather/lubumbashi" > weather.json
+#           jq -r '" " + (.temperature | sub("°C"; "") | tonumber | floor | tostring) + "°C, " + .condition' weather.json > weather.txt
 
-      - name: Create weather badge
-        run: |
-          WEATHER=$(cat weather.txt)
-          echo "<svg xmlns='http://www.w3.org/2000/svg' width='400' height='60'><rect width='100%' height='100%' fill='#555'/><rect x='0' y='0' width='120' height='60' fill='#007ec6'/><rect x='120' y='0' width='280' height='60' fill='#444'/><text x='60' y='35' fill='#fff' font-family='Verdana' font-size='14' text-anchor='middle'>Vienna</text><text x='260' y='35' fill='#fff' font-family='Verdana' font-size='14' text-anchor='middle'>${WEATHER}</text></svg>" > weather_badge.svg
+#       - name: Create weather badge
+#         run: |
+#           WEATHER=$(cat weather.txt)
+#           echo "<svg xmlns='http://www.w3.org/2000/svg' width='400' height='60'><rect width='100%' height='100%' fill='#555'/><rect x='0' y='0' width='120' height='60' fill='#007ec6'/><rect x='120' y='0' width='280' height='60' fill='#444'/><text x='60' y='35' fill='#fff' font-family='Verdana' font-size='14' text-anchor='middle'>Vienna</text><text x='260' y='35' fill='#fff' font-family='Verdana' font-size='14' text-anchor='middle'>${WEATHER}</text></svg>" > weather_badge.svg
 
-      - name: Commit and push changes
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add weather_badge.svg
-          git commit -m "Update weather badge"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Commit and push changes
+#         run: |
+#           git config user.name "GitHub Actions"
+#           git config user.email "actions@github.com"
+#           git add weather_badge.svg
+#           git commit -m "Update weather badge"
+#           git push
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
